<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@string/operational_area"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp" />


        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/ic_number_two" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pincodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_working_district">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown_working_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_working_taluka">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown_working_taluka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_working_village">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown_working_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background"

                android:text="@string/next" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>