<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center"
                android:text="@string/kisaan_mitr_info"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp" />


            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_number_four" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number_this_will_be">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumberEditText"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:maxLength="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:hint="@string/set_your_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setYourPasswordEditText"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_education">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/yourEducationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/basic_computer_knowledge">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/basicComputerKnowledgeDropDown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/do_you_have_two_wheeler">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/twoWheelerDropDown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/do_you_have_smartphone_or_internet_access">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/smartPhoneDropDown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/do_you_have_laptop_or_desktop">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/laptopDropDown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_current_job_details">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/currentJobDetailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/annual_income">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/annualIncomeEditText"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/experience_in_year">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/experienceInYearEditText"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextButton"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:text="@string/next" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>